--- a/default.conf
+++ b/default.conf
@@ -1,16 +1,27 @@
 server {
-    index index.php index.html;
-    server_name phpfpm.local;
-    error_log  /var/log/nginx/error.log;
-    access_log /var/log/nginx/access.log;
+
     root /var/www/html;
-    location ~ \.php$ {
-        try_files $uri =404;
-        fastcgi_split_path_info ^(.+\.php)(/.+)$;
+    index index.php;
+
+    charset utf-8;
+
+    location / {
+        try_files $uri $uri/ @rewrite;
+    }
+
+    location @rewrite {
+        rewrite ^ /index.php;
+    }
+
+    location ~ [^/]\.(hh|php)(/|$) {
+        fastcgi_keep_conn on;
+        fastcgi_split_path_info ^(.+?\.hh|.+?\.php)(/.*)$;
+        if (!-f $document_root$fastcgi_script_name) {
+            return 404;
+        }
         fastcgi_pass php-fpm:9000;
         fastcgi_index index.php;
-        include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        fastcgi_param PATH_INFO $fastcgi_path_info;
+        include fastcgi_params;
     }
 }
